[tool.poetry]
name = "client-success-helpers"
version = "0.1.0"
description = ""
authors = ["Scott Fuller <fullerscott085@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pymupdf = "^1.25.5"
openpyxl = "^3.1.5"
streamlit = "^1.44.1"
xlsxwriter = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
